quick fix for video title getting cut off on some camera/screen aspect ratios

--- a/shared/js/cyph/components/chat-main/chat-main.component.scss
+++ b/shared/js/cyph/components/chat-main/chat-main.component.scss
@@ -173,6 +173,10 @@
 					left: 0;
 					width: 100%;
 					height: 100%;
+
+					.title {
+						position: fixed;
+					}
 				}
 			}
 
